--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,6 +127,11 @@ button {
     text-align: center;
 }
 
+.steps {
+    text-align: center;
+    background: #fce138;
+}
+
 .section-title {
     font-size: 55px;
     color: #024e76;
@@ -152,11 +157,6 @@ button {
     margin: 0 auto;
 }
 
-.steps {
-    text-align: center;
-    background: #fce138;
-}
-
 .steps div {
     margin-bottom: 80px;
 }
@@ -179,5 +179,51 @@ button {
 
 .steps span {
     font-size: 38px;
+}
+.trainers {
+    text-align: center;
+}
+
+.trainer {
+    width: 900px;
+    margin: 0 auto 30px auto;
+    background: #024e76;
+    color: #fce138;
+    overflow: auto;
+}
+
+.trainer img {
+    width: 35%;
+    float: left;
+}
+
+.trainer-bio {
+    padding: 35px;
+    float:left;
+    width: 65%;
+}
+
+.text_left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
+}
+
+.trainer-bio h3{
+    font-size: 32px;
+    margin-bottom: 8px;
+}
+
+.trainer-bio h4{
+    font-weight: lighter;
+    font-size: 26px;
+    margin-bottom: 25px;
+}
+
+.trainer-bio p {
+    font-size: 17px;
+    line-height: 1.3;
 }
 
