--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,11 +134,11 @@ button {
 
 .section-title {
     font-size: 55px;
-    color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
     display: inline-block;
+    padding: 0 100px 20px 100px;
     border-bottom: 3px solid;
+    margin-bottom: 35px;
+    color: #024e76;   
 }
 
 .primary-border {
@@ -180,6 +180,7 @@ button {
 .steps span {
     font-size: 38px;
 }
+
 .trainers {
     text-align: center;
 }
@@ -221,9 +222,43 @@ button {
     font-size: 26px;
     margin-bottom: 25px;
 }
-
 .trainer-bio p {
     font-size: 17px;
     line-height: 1.3;
 }
+
+
+.contact-info {
+    text-align: center;
+    background: #024e76;
+}
+
+.contact-info h2 {
+    color: #fce138;
+}
+
+.contact-info iframe {
+    width: 400px;
+    height: 400px;
+}
+
+.contact-info div {
+    width: 410px;
+    display: inline-block;
+    vertical-align: top;
+    text-align: left;
+    margin: 30px 0 0 60px;
+    color: white;
+}
+
+
+
+
+
+
+
+
+
+
+
 
