--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ header h1 {
     display: inline;
 }
 
-header a{
+header a {
     text-decoration: none;
     color: #fce138;
 }
@@ -115,7 +115,7 @@ section {
     margin-bottom: 15px;
 }
 
-button {
+.hero-form button {
     color: #fce138;
     background-color: #024e76;
     border: none;
@@ -127,6 +127,13 @@ button {
     text-align: center;
 }
 
+.intro p {
+    line-height: 1.7;
+    color: #39a6b2;
+    width: 80%;
+    font-size: 20px;
+}
+
 .steps {
     text-align: center;
     background: #fce138;
@@ -134,11 +141,11 @@ button {
 
 .section-title {
     font-size: 55px;
-    display: inline-block;
-    padding: 0 100px 20px 100px;
-    border-bottom: 3px solid;
+    color: #024e76; 
     margin-bottom: 35px;
-    color: #024e76;   
+    padding: 0 100px 20px 100px;  
+    display: inline-block;
+    border-bottom: 3px solid;   
 }
 
 .primary-border {
@@ -222,35 +229,54 @@ button {
     font-size: 26px;
     margin-bottom: 25px;
 }
+
 .trainer-bio p {
     font-size: 17px;
     line-height: 1.3;
 }
 
-
-.contact-info {
-    text-align: center;
-    background: #024e76;
+.contact h2 {
+    color: #fce138;
 }
 
-.contact-info h2 {
+.contact h3 {
+    color: #fce138;
+    font-size: 32px;
+}
+
+.contact p, .contact-info address {
+    margin: 20px 0;
+    line-height: 1.5;
+    font-size: 20px;
+    font-size: normal;
+}
+
+.contact a {
     color: #fce138;
 }
 
 .contact-info iframe {
     width: 400px;
     height: 400px;
-}
+ }
 
-.contact-info div {
+.contact {
+
     width: 410px;
-    display: inline-block;
-    vertical-align: top;
-    text-align: left;
+    vertical-align: inline-block;
+    text-align: top;
     margin: 30px 0 0 60px;
     color: white;
 }
 
+.contact {
+    font-size: 55px;
+    display: inline-block;
+    padding: 0 100px 20px 100px;
+    border-bottom: 3px solid;
+    margin-bottom: 35px;
+    color: #024e76;
+}
 
 
 
