--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -207,26 +207,18 @@ section {
 
 .trainer-bio {
     padding: 35px;
-    float:left;
+    float: left;
     width: 65%;
 }
 
-.text_left {
-    text-align: left;
-}
-
-.text-right {
-    text-align: right;
-}
-
-.trainer-bio h3{
+.trainer-bio h3 {
     font-size: 32px;
     margin-bottom: 8px;
 }
 
-.trainer-bio h4{
+.trainer-bio h4 {
     font-weight: lighter;
-    font-size: 26px;
+    font-size:26px;
     margin-bottom: 25px;
 }
 
@@ -235,48 +227,16 @@ section {
     line-height: 1.3;
 }
 
-.contact h2 {
-    color: #fce138;
+.text-left {
+    text-align: left;
 }
 
-.contact h3 {
-    color: #fce138;
-    font-size: 32px;
+.text-right {
+    text-align: right;
 }
 
-.contact p, .contact-info address {
-    margin: 20px 0;
-    line-height: 1.5;
-    font-size: 20px;
-    font-size: normal;
-}
 
-.contact a {
-    color: #fce138;
-}
 
-.contact-info iframe {
-    width: 400px;
-    height: 400px;
- }
-
-.contact {
-
-    width: 410px;
-    vertical-align: inline-block;
-    text-align: top;
-    margin: 30px 0 0 60px;
-    color: white;
-}
-
-.contact {
-    font-size: 55px;
-    display: inline-block;
-    padding: 0 100px 20px 100px;
-    border-bottom: 3px solid;
-    margin-bottom: 35px;
-    color: #024e76;
-}
 
 
 
