--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,6 +81,10 @@ section {
 }
 /*Hero Style End*/
 
+.hero-cta{
+    
+}
+
 .hero-form {
     border: 3px solid #024e76;
     background-color: #fce138;
