--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,34 +1,45 @@
 /*MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
 
 .service-grid-container {
-    max-width: 940px;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 100px);
-    grid-gap: 10px;
+  background: lightyellow;
+  width: 80%;
+  display: grid;
+  grid-template-columns: 1fr repeat(2, 4fr);
+  grid-template-rows: repeat(5, 1fr) 2fr;
+  border: 2px solid #024e76;
+  color: #024e76;
+  font-size: 1.2rem;
 }
 
 .service-grid-item {
-    background-color: orange;
-    border: solid;
-    padding: 1em;
-    color: black;
+
+   padding: 15px 0;
+   border: 2px solid #024e76;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   text-align: center;
 }
 
-.box1 {
-    grid-column: 1/2;
-    grid-row: 1/3;
+.service-grid-item.basic {
+    grid-column: 2 / span 1;
 }
 
-.box2 {
-    grid-column: 3/4;
-    grid-row: 1/-1;
-}
-
-.box3 {
+.service-grid-item.both {
     grid-column: 2/ span 2;
-    grid-row: 3/ span 1;
+}
+
+.service-grid-item.cancel {
+    writing-mode: vertical-lr;
+    transform: rotate(180deg);
+    grid-column: 1;
+    grid-row: 1 / -1;
+
+}
+
+.grid-head, .grid-price, .service-grid-item.cancel {
+    font-size: 1.5rem;
+    font-weight: bold;
 }
 
 @media screen and (max-width: 980px) {
@@ -69,6 +80,20 @@
 
     .contact-info iframe{
         flex: 1 100%;
+    }
+
+    .service-grid-container {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .service-grid-item.basic {
+        grid-column: 1 / -1;
+    }
+
+    .service-grid-item.cancel {
+        transform: none;
+        writing-mode: 1 / -1;
+        grid-row: -1;
     }
 }
 /* MEDIA QUERY FOR TABLETS AND SMALLER */
@@ -481,7 +506,16 @@ section {
     display: flex;
 }
 
+/* SERVICE STYLES BEGIN */
+.services {
+    background: #fce138;
+}
 
+.service-grid-wrapper {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
 
 
 
