--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,15 +46,18 @@
     header {
         padding-bottom: 0;
         justify-content: center;
+        position: relative;
     }
 
     header h1 {
         width: 100;
         text-align: center;
+        
     }
 
     header nav ul li a {
         font-size: 20px;
+        
     }
 
     footer h2, footer div {
@@ -63,7 +66,7 @@
     }
 
     .hero-cta, .hero-form {
-        width: 100%;
+        width: 100%;  
     }
 
     .hero-cta {
@@ -173,6 +176,13 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-image: url("../images/hero-bg.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: 80%;
 }
 
 header h1 {
@@ -180,6 +190,7 @@ header h1 {
     margin: 0;
     font-size: 36px;
     color: #fce138;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
    
     
 }
@@ -207,6 +218,14 @@ header nav ul li a {
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+header nav ul li a:hover {
+    background: #fce138;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;   
 }
 
 footer {
@@ -242,11 +261,13 @@ section {
 .hero {
     background-image: url("../images/hero-bg.jpg");
     background-size: cover;
-    background-position: center;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     align-items: flex-start;
+    background-attachment: fixed;
+    background-position: 80%;
+
     
 }
 /*Hero Style End*/
@@ -264,14 +285,17 @@ section {
     font-style: italic;
     font-size: 55px;
     color: #fce138;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .hero-form {
     border: 3px solid #024e76;
-    background-color: #fce138;
+    background-color: rgba(252,225,56, 0.8);
     padding: 20px;
     color: #024e76;
-    margin: 3.5%;  
+    margin: 3.5%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;  
 }
 
 .hero-form h3 {
@@ -295,6 +319,13 @@ section {
     color: #024e76;
     width: 100%;
     margin-bottom: 15px;
+    border-radius: 15px;
+    background-color: rgba(255, 255,255, 0.75);
+}
+
+.form-input:focus {
+    background-color: rgba(255, 255, 255, 1);
+    outline: none;
 }
 
 .hero-form button {
@@ -303,6 +334,7 @@ section {
     border: none;
     padding: 10px 20px;
     font-size: 16px;
+    border-radius: 15px;
 }
 
 .steps {
@@ -340,11 +372,15 @@ section {
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
-    border-bottom: 1px solid #39a6b2;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+
+}
+
+.step:not(:last-child) {
+    border-bottom: 1px solid #39a6b2;
 }
 
 .step h3 {
@@ -383,6 +419,10 @@ section {
     font-size: 26px;
     line-height: 1.5;
     color: #024e76;
+}
+
+.step:last-child {
+    border-bottom: 1px solid #39a6b2;
 }
 
 .trainers {
@@ -486,6 +526,15 @@ section {
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
+    border-radius: 15px;
+    background-color: rgba(255, 255,255, 0.75);
+
+}
+
+.contact-form input:focus, .contact-form textarea:focus {
+    background-color: rgba(255, 255, 255, 1);
+    outline: none;
+}
 }
 
 .contact-form button {
@@ -496,6 +545,7 @@ section {
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
+    border-radius: 15px;
 }
 
 .contact a {
@@ -517,7 +567,14 @@ section {
     justify-content: center;
 }
 
+.hero-form button:hover {
+    background-color: #39a6b2;
+}
 
+.contact-form button:hover {
+    color: #fce138;
+    background: #39a6b2;
+}
 
 
 
